# softwareEngineering2

./: CMakeLists.txt  calculatorclass.cpp  calculatorclass.h  main.cpp  test.cpp
